@@ -1,3 +1,8 @@
+1999-11-25  David Byers  <davby@ida.liu.se>
+
+	* commands1.el (lyskom-change-pres-or-motd-2): Fixed nesting bug
+	that caused the callback not to be called.
+
 1999-11-23  David Byers  <davby@ida.liu.se>
 
 	* commands1.el (lyskom-private-answer-soon): Fixed nesting bug
